# FEUP_AED_TimeTable

./: CMakeLists.txt  Estudante.cpp  Estudante.h  Gestor.cpp  Gestor.h  Horario.cpp  Horario.h  Pedido.cpp  Pedido.h  PedidoIndividual.cpp  PedidoIndividual.h  README.md  Slot.cpp  Slot.h  UcTurma.cpp  UcTurma.h  main.cpp
docs/output/html/: _estudante_8h_source.html  _gestor_8h_source.html  _horario_8h_source.html  _pedido_8h_source.html  _pedido_individual_8h_source.html  _slot_8h_source.html  _uc_turma_8h_source.html  annotated.html  class_estudante-members.html  class_estudante.html  class_gestor-members.html  class_gestor.html  class_horario-members.html  class_horario.html  class_pedido-members.html  class_pedido.html  class_pedido_individual-members.html  class_pedido_individual.html  class_slot-members.html  class_slot.html  class_uc_turma-members.html  class_uc_turma.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  structordem_alfabetica_struct-members.html  structordem_alfabetica_struct.html  structordem_num_uc_struct-members.html  structordem_num_uc_struct.html
docs/output/latex/: _estudante_8h_source.tex  _gestor_8h_source.tex  _horario_8h_source.tex  _pedido_8h_source.tex  _pedido_individual_8h_source.tex  _slot_8h_source.tex  _uc_turma_8h_source.tex  annotated.tex  class_estudante.tex  class_gestor.tex  class_horario.tex  class_pedido.tex  class_pedido_individual.tex  class_slot.tex  class_uc_turma.tex  files.tex  refman.tex  structordem_num_uc_struct.tex  (+1 more)
schedule/: arquivo.csv  pendentes.csv
(+42 files in other folders)
