cmake_minimum_required(VERSION 3.23)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp UcTurma.cpp UcTurma.h Estudante.cpp Estudante.h Slot.cpp Slot.h Horario.cpp Horario.h Pedido.cpp Pedido.h PedidoIndividual.cpp PedidoIndividual.h Gestor.cpp Gestor.h PedidoAdd.h PedidoAdd.cpp PedidoRemove.cpp PedidoRemove.h PedidoAlter.cpp PedidoAlter.h)
